<resources>
    <string name="app_name">Cooking Converter</string>
    <string name="metrical_system">Metrical System</string>
    <string name="imperial_system">Imperial System</string>
    <string name="convert">Convert</string>
    <string name="choose_metric_system_unit">Choose Metric System Unit</string>
    <string name="choose_imperial_system_unit">Choose Imperial System Unit</string>
    <string name="left_to_right">Left To Right</string>
    <string name="right_to_left">Right To Left</string>
    <string name="up_to_down">MtoI</string>
    <string name="down_to_up">IToM</string>
    <string name="value">%s</string>
</resources>