<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/metrical_system_text"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:hint="@string/metrical_system"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/metrical_system_text_edit"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/imperial_system_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/imperial_system"
        app:layout_constraintStart_toEndOf="@id/metrical_system_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/imperial_system_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginBottom="16dp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>



    <Spinner
        android:id="@+id/metric_system_unit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/choose_metric_system_unit"
        app:layout_constraintEnd_toEndOf="@id/metrical_system_text"
        app:layout_constraintStart_toStartOf="@id/metrical_system_text"
        app:layout_constraintTop_toBottomOf="@id/metrical_system_text" />

    <Spinner
        android:id="@+id/imperial_system_unit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:contentDescription="@string/choose_imperial_system_unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/imperial_system_text"
        app:layout_constraintTop_toBottomOf="@id/imperial_system_text" />

    <Button
        android:id="@+id/side_convertion_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/left_to_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/metrical_system_text"
        app:layout_constraintTop_toBottomOf="@id/metric_system_unit"
        />

    <Button
        android:id="@+id/convert_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        app:layout_constraintStart_toStartOf="@id/imperial_system_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imperial_system_unit"

         />



</androidx.constraintlayout.widget.ConstraintLayout>